cambios en el index y en el footer

--- a/index.html
+++ b/index.html
@@ -113,12 +113,17 @@
         </button>
       </div>
       <p class="col-lg-4 p-3 text-center">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nostrum maxime doloremque beatae magni,
-        obcaecati explicabo facere soluta laborum hic provident atque totam illo eum iure vero optio error maiores.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nostrum maxime doloremque beatae magni,
-        obcaecati explicabo facere soluta laborum hic provident atque totam illo eum iure vero optio error maiores.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nostrum maxime doloremque beatae magni,
-        obcaecati explicabo facere soluta laborum hic provident atque totam illo eum iure vero optio error maiores.
+        Cuando creamos LQB decidimos basarnos en un concepto: acompañar a mujeres a brillar más de lo que ya brillan por si mismas, con nuestros diseños, en cada momento de su día a día.<br> Sin edad, ni reglas.
+        LQB nace de la necesidad entre mamá y mia de tener a nuestro alcance joyas que nos hicieran sentir representadas. 
+        <br>
+        Usar joyas es una manera de expresar parte de nuestra personalidad, es destacar lo que amamos y profundizar en los detalles que nos representan.
+        <br>
+        Como todo en la moda, es también, una forma de comunicación.
+        <br>
+        Una joya como las de LQB esta creada para acompañarte por mucho tiempo, en cada momento de tu vida donde creas que la necesites.
+        <br>
+        Queremos ser parte de los momentos que más feliz te hagan, pero también aquellos donde necesites recordarte cuanto brillás.
+
       </p>
         <a href="history.html" class="col-lg-4 col-sm-12 p-3" title="Acceso directo a la historia de la marca">
         <img src="multimedia/images/madre_hija.jpg" style="width:100%; height: 300px;" class="history-image" alt="Imagen de las fundadoras de la marca">
