--- a/index.html
+++ b/index.html
@@ -89,16 +89,20 @@
       <div id="carouselExampleControls"
         class="carousel slide d-flex justify-content-center p-3 col-lg-4 col-md-12 col-sm-12" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="3000">
+          <div class="carousel-item active" data-bs-interval="2500">
             <a href="shop.html" title="Acceso directo a la tienda">
-              <img src="https://dummyimage.com/600x300" class="d-block gallery-image" alt="slide1">
+              <img src="multimedia/images/anillo-queen-silvernight.jpeg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="slide1">
             </a>
           </div>
-          <div class="carousel-item" data-bs-interval="3000">
-            <img src="https://dummyimage.com/600x300" class="d-block w-100" alt="slide2">
+          <div class="carousel-item" data-bs-interval="2500">
+            <a href="shop.html" title="Acceso directo a la tienda">
+            <img src="multimedia/images/aros-cubana-lqb-bling.jpeg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="slide2">
+            </a>
           </div>
-          <div class="carousel-item" data-bs-interval="3000">
-            <img src="https://dummyimage.com/600x300" class="d-block w-100" alt="slide3">
+          <div class="carousel-item" data-bs-interval="2500">
+            <a href="shop.html" title="Acceso directo a la tienda">
+            <img src="multimedia/images/pulsera-cristal-love.jpg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="slide3">
+            </a>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
