Retoques en el index y en el shop

--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2500">
             <a href="shop.html" title="Acceso directo a la tienda">
-              <img src="multimedia/images/anillo-queen-silvernight.jpeg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="slide1">
+              <img src="multimedia/images/anillo-queen-silvernight.jpeg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="Imagen de un producto de la tienda">
             </a>
           </div>
           <div class="carousel-item" data-bs-interval="2500">
             <a href="shop.html" title="Acceso directo a la tienda">
-            <img src="multimedia/images/aros-cubana-lqb-bling.jpeg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="slide2">
+            <img src="multimedia/images/aros-cubana-lqb-bling.jpeg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="Imagen de un producto de la tienda">
             </a>
           </div>
           <div class="carousel-item" data-bs-interval="2500">
             <a href="shop.html" title="Acceso directo a la tienda">
-            <img src="multimedia/images/pulsera-cristal-love.jpg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="slide3">
+            <img src="multimedia/images/pulsera-cristal-love.jpg" style="width:100%; height: 300px;" class="d-block w-100 gallery-image" alt="Imagen de un producto de la tienda">
             </a>
           </div>
         </div>
