--- a/shop.html
+++ b/shop.html
@@ -79,7 +79,7 @@
     <h1 class="text-center fw-bold pt-2 border-top border-3">Shop</h1>
 
     <section class="container-fluid mx-auto">
-        <!-- Imágenes -->
+        <!-- Imágenes de los productos-->
         <div class="row">
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-bermudablue.png" alt="anillo queen bermudablue" class="gallery-image">
