basta por favor quiero terminar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
   
   <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/style.css">
 
   <!-- Fuentes -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -129,8 +128,8 @@
         Queremos ser parte de los momentos que más feliz te hagan, pero también aquellos donde necesites recordarte cuanto brillás.
 
       </p>
-        <a href="history.html" class="col-lg-4 col-sm-12 p-3" title="Acceso directo a la historia de la marca">
-        <img src="multimedia/images/madre_hija.jpg" style="width:100%; height: 300px;" class="history-image" alt="Imagen de las fundadoras de la marca">
+        <a href="history.html" class="col-lg-4 col-sm-12 p-3 div-img" title="Acceso directo a la historia de la marca">
+        <img src="multimedia/images/madre_hija.jpg" style="width:100%; height: 300px;" class="history-image img" alt="Imagen de las fundadoras de la marca">
         </a>
     </div>
   </section>
