--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,6 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/style.css">
 
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -84,62 +83,62 @@
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-bermudablue.png" alt="anillo queen bermudablue" class="gallery-image">
                 <h5 class="text-center p-2 fw-bold">Anillo Queen</h5>
-                <a href="#" class="text-center contact-button">Comprar</a>
+                <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-rosaab.JPG" alt="anillo queen rosaab" class="gallery-image">
                 <h5 class="text-center p-2 fw-bold">Anillo Queen</h5>
-                <a href="#" class="text-center contact-button">Comprar</a>
+                <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-silvernight.jpeg" alt="anillo queen silvernight" class="gallery-image">
                 <h5 class="text-center p-2 fw-bold">Anillo Queen</h5>
-                <a href="#" class="text-center contact-button">Comprar</a>
+                <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-vitrallight.jpg" alt="anillo queen silvernight" class="gallery-image">
                 <h5 class="text-center p-2 fw-bold">Anillo Queen</h5>
-                <a href="#" class="text-center contact-button">Comprar</a>
+                <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-heliotrope.jpeg" alt="aros-cubanita-start-heliotrope" class="gallery-image" loading="lazy">
               <h5 class="text-center p-2 fw-bold">Aros cubanita start</h5>
-              <a href="#" class="text-center contact-button">Comprar</a>
+              <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-cal.jpg" alt="aros-cubanita-start-cal" class="gallery-image" loading="lazy">
               <h5 class="text-center p-2 fw-bold">Aros cubanita start</h5>
-              <a href="#" class="text-center contact-button">Comprar</a>
+              <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-rosaab.jpg" alt="aros-cubanita-start-rosaab" class="gallery-image" loading="lazy">
               <h5 class="text-center p-2 fw-bold">Aros cubanita start</h5>
-              <a href="#" class="text-center contact-button">Comprar</a>
+              <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-vitral-medium.jpeg" alt="aros-cubanita-start-vitral-medium" class="gallery-image" loading="lazy">
               <h5 class="text-center p-2 fw-bold">Aros cubanita start</h5>
-              <a href="#" class="text-center contact-button">Comprar</a>
+              <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/pulsera-cristal-love.jpg" alt="pulsera-cristal-love" class="gallery-image" loading="lazy">
               <h5 class="text-center p-2 fw-bold">Pulsera cristal love</h5>
-              <a href="#" class="text-center contact-button">Comprar</a>
+              <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubana-lqb-bling.jpeg" alt="aros-cubana-lqb-bling" class="gallery-image" loading="lazy">
               <h5 class="text-center p-2 fw-bold">Aros cubana LQB bling</h5>
-              <a href="#" class="text-center contact-button">Comprar</a>
+              <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/conjunto-love.jpg" alt="conjunto-love" class="gallery-image" loading="lazy">
               <h5 class="text-center p-2 fw-bold">Conjunto love</h5>
-              <a href="#" class="text-center contact-button">Comprar</a>
+              <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/anillo-bling.jpg" alt="anillo-bling" class="gallery-image" loading="lazy">
               <h5 class="text-center p-2 fw-bold">Anillo bling</h5>
-              <a href="#" class="text-center contact-button">Comprar</a>
+              <a href="#" class="text-center compra contact-button"></a>
             </div>
         </div>        
     </section>
