--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <path
                 d="M83.21.29H6.79A6.65,6.65,0,0,0,.14,6.93V63.07a6.65,6.65,0,0,0,6.65,6.64H83.21a6.65,6.65,0,0,0,6.65-6.64V6.93A6.65,6.65,0,0,0,83.21.29Zm-81.07,15H87.86V28.76H2.14Zm4.65-13H83.21a4.65,4.65,0,0,1,4.65,4.64v6.4H2.14V6.93A4.65,4.65,0,0,1,6.79,2.29ZM83.21,67.71H6.79a4.65,4.65,0,0,1-4.65-4.64V30.76H87.86V63.07A4.65,4.65,0,0,1,83.21,67.71ZM29.68,51.9H14.25a1,1,0,0,0,0,2H29.68a1,1,0,0,0,0-2Zm30.86,0H34.82a1,1,0,0,0,0,2H60.54a1,1,0,0,0,0-2Z" />
             </svg>
-            <span class="service-tittle"><h2 class="h2-icons">6 cuotas sin interés</h2>
+            <span class="service-tittle"><h2 class="h2-icons service-tittle">6 cuotas sin interés</h2>
               <p>Con mercado pago</p>
             </span>
           </a>
@@ -156,7 +156,7 @@
               <path
                 d="M1,82a1,1,0,0,1-.71-.3,1,1,0,0,1-.25-1L5.55,60.6A40.68,40.68,0,0,1,41,0,40.33,40.33,0,0,1,69.73,11.92h0A40.66,40.66,0,0,1,82,40.66,41,41,0,0,1,21.89,76.55L1.25,82A1.07,1.07,0,0,1,1,82ZM41,2A38.68,38.68,0,0,0,7.49,60a1,1,0,0,1,.1.76L2.42,79.59l19.34-5.07a1,1,0,0,1,.74.08A38.57,38.57,0,0,0,68.31,13.33,38.32,38.32,0,0,0,41,2ZM53.16,64.05c-2.85,0-6-.78-11.63-3.22C31.82,56.62,24.75,48,21.41,43.19c-.1-.14-.16-.24-.2-.28l-.06-.09c-1.82-2.49-4.89-7.43-4.89-12.58a14,14,0,0,1,4.11-10.15l.23-.25a5.27,5.27,0,0,1,3.85-1.77c.77,0,1.58,0,2.29,0a1.33,1.33,0,0,0,.2,0h0c1.14,0,2.32.32,3.27,2.61l1.11,2.69c1,2.33,2.26,5.52,2.46,5.9a3.22,3.22,0,0,1,.11,2.93A15.53,15.53,0,0,1,31,36.3c-.83.87-.83.87-.54,1.36,4.41,7.57,8.77,10.14,15.44,13.47.88.46,1,.27,1.32-.05.95-1.1,2.94-3.45,3.62-4.48,1.27-1.92,2.86-1.32,3.81-1,1.15.41,7,3.29,8,3.82l.53.26a4.11,4.11,0,0,1,2.12,1.57c.57.92.31,3.73-.61,6.34-1.14,3.21-6.25,5.84-8.66,6.2A20.47,20.47,0,0,1,53.16,64.05Zm-28.71-44a3.3,3.3,0,0,0-2.38,1.13l-.24.25a12,12,0,0,0-3.57,8.79c0,3.35,1.64,7.5,4.5,11.4l.29.4c3.22,4.61,10,13,19.27,17,7.14,3.08,9.92,3.37,13.45,2.85C57.7,61.55,62,59.29,62.83,57a10.37,10.37,0,0,0,.73-4.77,5.89,5.89,0,0,0-1.22-.67l-.54-.26h0c-1.29-.66-6.89-3.39-7.85-3.73s-1.11-.33-1.45.2c-.93,1.39-3.66,4.55-3.78,4.68a2.77,2.77,0,0,1-3.73.53c-6.79-3.39-11.59-6.22-16.27-14.25-1.05-1.8-.1-2.79.82-3.75a13.23,13.23,0,0,0,2.57-3.57,1.16,1.16,0,0,0-.1-1.14c-.21-.42-1.18-2.77-2.52-6l-1.1-2.68c-.58-1.38-.94-1.37-1.43-1.38h-.34C26,20.07,25.19,20.07,24.45,20.07Z" />
             </svg>
-            <span class="service-tittle"><h2 class="h2-icons">Conversemos</h2>
+            <span class="service-tittle"><h2 class="h2-icons service-tittle">Conversemos</h2>
               <p>Te asesoramos personalmente y evacuamos tus dudas</p>
             </span>
           </a>
@@ -168,7 +168,7 @@
             <path
               d="M41,0A41,41,0,1,0,82,41,41,41,0,0,0,41,0Zm0,80A39,39,0,1,1,80,41,39.05,39.05,0,0,1,41,80Zm4.75-38.83L42,40V25h2.1a9.75,9.75,0,0,1,7.44,2.73,1,1,0,0,0,1.29-1.53A11.72,11.72,0,0,0,44.1,23H42V15.19a1,1,0,1,0-2,0V23H36.59a8.72,8.72,0,0,0-8.71,8.71c0,4.4,3,7.48,8.43,8.67L40,41.53v15H38a9.79,9.79,0,0,1-7.44-2.72,1,1,0,0,0-1.28,1.53A11.67,11.67,0,0,0,38,58.55h2v6.83a1,1,0,0,0,2,0V58.55h3.46a8.72,8.72,0,0,0,8.71-8.71C54.17,45.44,51.16,42.36,45.75,41.17Zm-8.94-2.68c-4.6-1-6.93-3.28-6.93-6.74A6.72,6.72,0,0,1,36.59,25H40V39.45Zm8.65,18.06H42V42.13l3.25,1c4.59,1,6.92,3.28,6.92,6.74A6.72,6.72,0,0,1,45.46,56.55Z" />
           </svg>
-          <span class="service-tittle"><h2 class="h2-icons">15% off</h2>
+          <span class="service-tittle"><h2 class="h2-icons service-tittle">15% off</h2>
             <p>Con transferencia bancaria</p>
           </span>
         </a>
@@ -180,7 +180,7 @@
             <path
               d="M87.93,34.84a.5.5,0,0,0-.08-.12.59.59,0,0,0-.1-.17l-16-18.23A1,1,0,0,0,71,16H60.53V6.65A6.63,6.63,0,0,0,53.9,0H6.63A6.63,6.63,0,0,0,0,6.65V49.19a6.64,6.64,0,0,0,6.63,6.64h3.64a10.7,10.7,0,1,0,20.24,0H63a10.7,10.7,0,1,0,20.24,0H87a1,1,0,0,0,1-1V35.21A1.16,1.16,0,0,0,87.93,34.84ZM70.58,18,84.8,34.21H60.53V18ZM20.39,68a8.71,8.71,0,1,1,8.7-8.71A8.72,8.72,0,0,1,20.39,68Zm0-19.41a10.7,10.7,0,0,0-9.2,5.25H6.63A4.63,4.63,0,0,1,2,49.19V6.65A4.63,4.63,0,0,1,6.63,2H53.9a4.64,4.64,0,0,1,4.64,4.64V53.83h-29A10.69,10.69,0,0,0,20.39,48.58ZM73.07,68a8.71,8.71,0,1,1,8.7-8.71A8.72,8.72,0,0,1,73.07,68Zm9.19-14.16a10.67,10.67,0,0,0-18.38,0H60.53V36.21H86V53.83Z" />
           </svg>
-          <span class="service-tittle"><h2 class="h2-icons">Envíos a todo el país</h2>
+          <span class="service-tittle"><h2 class="h2-icons service-tittle">Envíos a todo el país</h2>
             <p>Mediante BlueMail y Moto mensajería</p>
           </span>
         </a>
