--- a/doubts.html
+++ b/doubts.html
@@ -170,15 +170,15 @@
         <div class="social-menu">
         <h2 class="fw-bold">Seguinos en nuestras redes</h2>
         <ul>
-            <li><a href="https://www.facebook.com/lqbstore" target="_blank" title="Acceso directo a nuestra cuenta de Instagram"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/lqb.store/" target="_blank" title="Acceso directo a nuestra cuenta de Instagram"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/lqbstore" target="_blank" rel="noreferrer" title="Acceso directo a nuestra cuenta de Instagram"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/lqb.store/" target="_blank" rel="noreferrer" title="Acceso directo a nuestra cuenta de Instagram"><i class="fa fa-instagram"></i></a></li>
         </ul>
         </div>
     </footer>
     <!-- Fin Footer -->
 
     <!-- Whatsapp Button -->
-    <a href="https://api.whatsapp.com/send/?phone=5491168460401&text&app_absent=0" class="float" target="_blank" title="Acceso directo a nuestro chat de Whatsapp">
+    <a href="https://api.whatsapp.com/send/?phone=5491168460401&text&app_absent=0" class="float" target="_blank" rel="noreferrer" title="Acceso directo a nuestro chat de Whatsapp">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
 
