--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <!-- Icono que aparece en la pestaña -->
   <link rel="shortcut icon" href="multimedia/icons/logolqb.png" type="image/png">
 
+  <link rel=”canonical” href=https://proyectoflqbschilliro.000webhostapp.com//>
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -194,15 +196,15 @@
     <div class="social-menu">
       <h2 class="fw-bold">Seguinos en nuestras redes</h2>
       <ul>
-        <li><a href="https://www.facebook.com/lqbstore" target="_blank" title="Acceso directo a nuestra cuenta de Facebook"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com/lqb.store/" target="_blank" title="Acceso directo a nuestra cuenta de Instagram"><i class="fa fa-instagram" ></i></a></li>
+        <li><a href="https://www.facebook.com/lqbstore" target="_blank" rel="noreferrer" title="Acceso directo a nuestra cuenta de Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/lqb.store/" target="_blank" rel="noreferrer" title="Acceso directo a nuestra cuenta de Instagram"><i class="fa fa-instagram" ></i></a></li>
       </ul>
     </div>
   </footer>
   <!-- Fin Footer -->
 
   <!-- Whatsapp Button -->
-  <a href="https://api.whatsapp.com/send/?phone=5491168460401&text&app_absent=0" class="float" target="_blank" title="Acceso directo a nuestro chat de Whatsapp">
+  <a href="https://api.whatsapp.com/send/?phone=5491168460401&text&app_absent=0" class="float" target="_blank" rel="noreferrer" title="Acceso directo a nuestro chat de Whatsapp">
     <i class="fa fa-whatsapp my-float"></i>
   </a>
 
