--- a/shop.html
+++ b/shop.html
@@ -81,22 +81,22 @@
         <!-- Imágenes de los productos-->
         <div class="row">
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-                <img src="multimedia/images/anillo-queen-bermudablue.png" alt="anillo queen bermudablue" class="gallery-image">
+                <img src="multimedia/images/anillo-queen-bermudablue.png" alt="anillo queen bermudablue" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
                 <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-                <img src="multimedia/images/anillo-queen-rosaab.JPG" alt="anillo queen rosaab" class="gallery-image">
+                <img src="multimedia/images/anillo-queen-rosaab.JPG" alt="anillo queen rosaab" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
                 <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-                <img src="multimedia/images/anillo-queen-silvernight.jpeg" alt="anillo queen silvernight" class="gallery-image">
+                <img src="multimedia/images/anillo-queen-silvernight.jpeg" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
                 <a href="#" class="text-center compra contact-button"></a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-                <img src="multimedia/images/anillo-queen-vitrallight.jpg" alt="anillo queen silvernight" class="gallery-image">
+                <img src="multimedia/images/anillo-queen-vitrallight.jpg" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
                 <a href="#" class="text-center compra contact-button"></a>
             </div>
