quiero terminar por favor

--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Description -->
-    <meta name="description" content="Hacemos piezas propias diseñadas por mama y por mi, llevadas a cabo por un equipo de orfebres con amplia experiencia en el rubro. Nuestro objetivo es crear joyas unicas en plata 925 combinadas con cristales swarovski y zircones libres de niquel.">
+    <meta name="description" content="La historia de como comenzo LQB. Hacemos piezas propias diseñadas por mama y por mi, llevadas a cabo por un equipo de orfebres con amplia experiencia en el rubro. Nuestro objetivo es crear joyas unicas en plata 925 combinadas con cristales swarovski y zircones libres de niquel.">
 
     <!-- Keywords -->
     <meta name="keywords" content="Joyas, Joyeria, Joyas de autor, Joyas de diseño, Diseño Argentino Brillos, Plata 925, Swarovski, Calidad">
@@ -22,6 +22,9 @@
     <!-- Icono que aparece en la pestaña -->
     <link rel="shortcut icon" href="multimedia/icons/logolqb.png" type="image/png">
 
+    <!-- Etiqueta canónica -->
+    <link rel="canonical" href=https://proyectoflqbschilliro.000webhostapp.com/history.html>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -35,7 +38,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Nombre de la pestaña -->
-    <title>LQB Store - Joyas de autor - Calidad y versatilidad</title>
+    <title>LQB Store - Joyas de autor - Nuestra historia</title>
 </head>
 <body>
   <!-- Menú -->
