--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <!-- Icono que aparece en la pestaña -->
   <link rel="shortcut icon" href="multimedia/icons/logolqb.png" type="image/png">
 
-  <link rel=”canonical” href=https://proyectoflqbschilliro.000webhostapp.com//>
+  <!-- Etiqueta canónica -->
+  <link rel="canonical" href=https://proyectoflqbschilliro.000webhostapp.com/index.html>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
