--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Description -->
-    <meta name="description" content="Hacemos piezas propias diseñadas por mama y por mi, llevadas a cabo por un equipo de orfebres con amplia experiencia en el rubro. Nuestro objetivo es crear joyas unicas en plata 925 combinadas con cristales swarovski y zircones libres de niquel.">
+    <meta name="description" content="Shop online de las piezas propias diseñadas por mama y por mi, llevadas a cabo por un equipo de orfebres con amplia experiencia en el rubro. Nuestro objetivo es crear joyas unicas en plata 925 combinadas con cristales swarovski y zircones libres de niquel.">
 
     <!-- Keywords -->
     <meta name="keywords" content="Joyas, Joyeria, Joyas de autor, Joyas de diseño, Diseño Argentino Brillos, Plata 925, Swarovski, Calidad">
@@ -22,6 +22,9 @@
     <!-- Icono que aparece en la pestaña -->
     <link rel="shortcut icon" href="multimedia/icons/logolqb.png" type="image/png">
 
+    <!-- Etiqueta canónica -->
+    <link rel="canonical" href=https://proyectoflqbschilliro.000webhostapp.com/shop.html>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -35,7 +38,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Nombre de la pestaña -->
-    <title>LQB Store - Joyas de autor - Calidad y versatilidad</title>
+    <title>LQB Store - Joyas de autor - Shop online</title>
 </head>
 <body>
     <!-- Menú -->
@@ -83,62 +86,62 @@
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-bermudablue.png" alt="anillo queen bermudablue" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button"></a>
+                <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-rosaab.JPG" alt="anillo queen rosaab" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button"></a>
+                <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-silvernight.jpeg" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button"></a>
+                <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-vitrallight.jpg" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button"></a>
+                <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-heliotrope.jpeg" alt="aros-cubanita-start-heliotrope" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-cal.jpg" alt="aros-cubanita-start-cal" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-rosaab.jpg" alt="aros-cubanita-start-rosaab" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-vitral-medium.jpeg" alt="aros-cubanita-start-vitral-medium" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/pulsera-cristal-love.jpg" alt="pulsera-cristal-love" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Pulsera cristal love</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubana-lqb-bling.jpeg" alt="aros-cubana-lqb-bling" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubana LQB bling</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/conjunto-love.jpg" alt="conjunto-love" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Conjunto love</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button"> </a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/anillo-bling.jpg" alt="anillo-bling" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Anillo bling</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button"> </a>
             </div>
         </div>        
     </section>
