--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Description -->
-    <meta name="description" content="Hacemos piezas propias diseñadas por mama y por mi, llevadas a cabo por un equipo de orfebres con amplia experiencia en el rubro. Nuestro objetivo es crear joyas unicas en plata 925 combinadas con cristales swarovski y zircones libres de niquel.">
+    <meta name="description" content="Contactacnos. Hacemos piezas propias diseñadas por mama y por mi, llevadas a cabo por un equipo de orfebres con amplia experiencia en el rubro. Nuestro objetivo es crear joyas unicas en plata 925 combinadas con cristales swarovski y zircones libres de niquel.">
 
     <!-- Keywords -->
     <meta name="keywords" content="Joyas, Joyeria, Joyas de autor, Joyas de diseño, Diseño Argentino Brillos, Plata 925, Swarovski, Calidad">
@@ -21,6 +21,9 @@
 
     <!-- Icono que aparece en la pestaña -->
     <link rel="shortcut icon" href="multimedia/icons/logolqb.png" type="image/png">
+
+    <!-- Etiqueta canónica -->
+    <link rel="canonical" href=https://proyectoflqbschilliro.000webhostapp.com/contact.html>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -37,7 +40,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Nombre de la pestaña -->
-    <title>LQB Store - Joyas de autor - Calidad y versatilidad</title>
+    <title>LQB Store - Joyas de autor - Contacto</title>
 </head>
 <body class="contact">
 
