--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Fuentes -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" as="font" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" as="font" crossorigin="">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" as="font" crossorigin="">
 
   <!-- Nombre de la pestaña -->
   <title>LQB Store - Joyas de autor - Calidad y versatilidad</title>
