--- a/shop.html
+++ b/shop.html
@@ -33,9 +33,9 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Fuentes -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" as="font" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" as="font" crossorigin="">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" as="font" crossorigin="">
 
     <!-- Nombre de la pestaña -->
     <title>LQB Store - Joyas de autor - Shop online</title>
@@ -84,64 +84,64 @@
         <!-- Imágenes de los productos-->
         <div class="row">
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-                <img src="multimedia/images/anillo-queen-bermudablue.png" alt="anillo queen bermudablue" class="gallery-image" loading="lazy">
+                <img src="multimedia/images/anillo-queen-bermudablue.jpg" width="342px" height="342px" alt="anillo queen bermudablue" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button"></a>
+                <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-                <img src="multimedia/images/anillo-queen-rosaab.JPG" alt="anillo queen rosaab" class="gallery-image" loading="lazy">
+                <img src="multimedia/images/anillo-queen-rosaab.JPG" width="342px" height="342px" alt="anillo queen rosaab" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button"></a>
+                <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-                <img src="multimedia/images/anillo-queen-silvernight.jpeg" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
+                <img src="multimedia/images/anillo-queen-silvernight.jpeg" width="342px" height="342px" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button"></a>
+                <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-                <img src="multimedia/images/anillo-queen-vitrallight.jpg" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
+                <img src="multimedia/images/anillo-queen-vitrallight.jpg" width="342px" height="342px" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
                 <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button"></a>
+                <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-              <img src="multimedia/images/aros-cubanita-start-heliotrope.jpeg" alt="aros-cubanita-start-heliotrope" class="gallery-image" loading="lazy">
+              <img src="multimedia/images/aros-cubanita-start-heliotrope.jpeg" width="342px" height="342px" alt="aros-cubanita-start-heliotrope" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-              <img src="multimedia/images/aros-cubanita-start-cal.jpg" alt="aros-cubanita-start-cal" class="gallery-image" loading="lazy">
+              <img src="multimedia/images/aros-cubanita-start-cal.jpg" width="342px" height="342px" alt="aros-cubanita-start-cal" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-              <img src="multimedia/images/aros-cubanita-start-rosaab.jpg" alt="aros-cubanita-start-rosaab" class="gallery-image" loading="lazy">
+              <img src="multimedia/images/aros-cubanita-start-rosaab.jpg" width="342px" height="342px" alt="aros-cubanita-start-rosaab" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-              <img src="multimedia/images/aros-cubanita-start-vitral-medium.jpeg" alt="aros-cubanita-start-vitral-medium" class="gallery-image" loading="lazy">
+              <img src="multimedia/images/aros-cubanita-start-vitral-medium.jpeg" width="342px" height="342px" alt="aros-cubanita-start-vitral-medium" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-              <img src="multimedia/images/pulsera-cristal-love.jpg" alt="pulsera-cristal-love" class="gallery-image" loading="lazy">
+              <img src="multimedia/images/pulsera-cristal-love.jpg" width="342px" height="342px" alt="pulsera-cristal-love" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Pulsera cristal love</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-              <img src="multimedia/images/aros-cubana-lqb-bling.jpeg" alt="aros-cubana-lqb-bling" class="gallery-image" loading="lazy">
+              <img src="multimedia/images/aros-cubana-lqb-bling.jpeg" width="342px" height="342px" alt="aros-cubana-lqb-bling" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Aros cubana LQB bling</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-              <img src="multimedia/images/conjunto-love.jpg" alt="conjunto-love" class="gallery-image" loading="lazy">
+              <img src="multimedia/images/conjunto-love.jpg" width="342px" height="342px" alt="conjunto-love" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Conjunto love</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button">.</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
-              <img src="multimedia/images/anillo-bling.jpg" alt="anillo-bling" class="gallery-image" loading="lazy">
+              <img src="multimedia/images/anillo-bling.jpg" width="342px" height="342px" alt="anillo-bling" class="gallery-image" loading="lazy">
               <h2 class="text-center p-2 fw-bold h2-shop">Anillo bling</h2>
-              <a href="#" class="text-center compra contact-button"></a>
+              <a href="#" class="text-center compra contact-button">.</a>
             </div>
         </div>        
     </section>
