--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,11 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Fuentes -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" as="font" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" as="font" crossorigin="">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" as="font" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" as="font" crossorigin="">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Nombre de la pestaña -->
     <title>LQB Store - Joyas de autor - Contacto</title>
