--- a/doubts.html
+++ b/doubts.html
@@ -73,8 +73,12 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html" title="Acceso directo a la pagina de contacto">Contacto</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="cart.html" title="Acceso directo a la seccion de dudas">Carrito</a>
+          </li>
         </ul>
-      </div>
+        </div>
     </div>
   </nav>
 
