--- a/shop.html
+++ b/shop.html
@@ -73,6 +73,10 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html" title="Acceso directo a la pagina de contacto">Contacto</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="cart.html" title="Acceso directo a la seccion de dudas">Carrito</a>
+          </li>
         </ul>
         </div>
     </div>
@@ -85,65 +89,65 @@
         <div class="row">
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-bermudablue.jpg" width="342px" height="342px" alt="anillo queen bermudablue" class="gallery-image" loading="lazy">
-                <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button">.</a>
+                <h2 class="text-center p-2 fw-bold h2-shop title">Anillo Queen</h2>
+                <button class="text-center compra contact-button precio">$ 5</button>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-rosaab.JPG" width="342px" height="342px" alt="anillo queen rosaab" class="gallery-image" loading="lazy">
-                <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button">.</a>
+                <h2 class="text-center p-2 fw-bold h2-shop title">Anillo Queen</h2>
+                <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-silvernight.jpeg" width="342px" height="342px" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
-                <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button">.</a>
+                <h2 class="text-center p-2 fw-bold h2-shop title">Anillo Queen</h2>
+                <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
                 <img src="multimedia/images/anillo-queen-vitrallight.jpg" width="342px" height="342px" alt="anillo queen silvernight" class="gallery-image" loading="lazy">
-                <h2 class="text-center p-2 fw-bold h2-shop">Anillo Queen</h2>
-                <a href="#" class="text-center compra contact-button">.</a>
+                <h2 class="text-center p-2 fw-bold h2-shop title">Anillo Queen</h2>
+                <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-heliotrope.jpeg" width="342px" height="342px" alt="aros-cubanita-start-heliotrope" class="gallery-image" loading="lazy">
-              <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button">.</a>
+              <h2 class="text-center p-2 fw-bold h2-shop title">Aros cubanita start</h2>
+              <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-cal.jpg" width="342px" height="342px" alt="aros-cubanita-start-cal" class="gallery-image" loading="lazy">
-              <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button">.</a>
+              <h2 class="text-center p-2 fw-bold h2-shop title">Aros cubanita start</h2>
+              <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-rosaab.jpg" width="342px" height="342px" alt="aros-cubanita-start-rosaab" class="gallery-image" loading="lazy">
-              <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button">.</a>
+              <h2 class="text-center p-2 fw-bold h2-shop title">Aros cubanita start</h2>
+              <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubanita-start-vitral-medium.jpeg" width="342px" height="342px" alt="aros-cubanita-start-vitral-medium" class="gallery-image" loading="lazy">
-              <h2 class="text-center p-2 fw-bold h2-shop">Aros cubanita start</h2>
-              <a href="#" class="text-center compra contact-button">.</a>
+              <h2 class="text-center p-2 fw-bold h2-shop title">Aros cubanita start</h2>
+              <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/pulsera-cristal-love.jpg" width="342px" height="342px" alt="pulsera-cristal-love" class="gallery-image" loading="lazy">
-              <h2 class="text-center p-2 fw-bold h2-shop">Pulsera cristal love</h2>
-              <a href="#" class="text-center compra contact-button">.</a>
+              <h2 class="text-center p-2 fw-bold h2-shop title">Pulsera cristal love</h2>
+              <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/aros-cubana-lqb-bling.jpeg" width="342px" height="342px" alt="aros-cubana-lqb-bling" class="gallery-image" loading="lazy">
-              <h2 class="text-center p-2 fw-bold h2-shop">Aros cubana LQB bling</h2>
-              <a href="#" class="text-center compra contact-button">.</a>
+              <h2 class="text-center p-2 fw-bold h2-shop title">Aros cubana LQB bling</h2>
+              <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/conjunto-love.jpg" width="342px" height="342px" alt="conjunto-love" class="gallery-image" loading="lazy">
-              <h2 class="text-center p-2 fw-bold h2-shop">Conjunto love</h2>
-              <a href="#" class="text-center compra contact-button">.</a>
+              <h2 class="text-center p-2 fw-bold h2-shop title">Conjunto love</h2>
+              <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
             <div class="card col-lg-3 col-md-6 col-sm-12 p-2">
               <img src="multimedia/images/anillo-bling.jpg" width="342px" height="342px" alt="anillo-bling" class="gallery-image" loading="lazy">
-              <h2 class="text-center p-2 fw-bold h2-shop">Anillo bling</h2>
-              <a href="#" class="text-center compra contact-button">.</a>
+              <h2 class="text-center p-2 fw-bold h2-shop title">Anillo bling</h2>
+              <a href="#" class="text-center compra contact-button precio">$ 5</a>
             </div>
-        </div>        
+        </div>  
     </section>
 
     <!-- Inicio Footer -->
@@ -170,5 +174,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
         integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous">
     </script>
+    <script src="js/cart.js"></script>
 </body>
 </html>
